# NoFrameworkFrontend

./: Cargo.toml  README.md  build.bat  index.html  index.js  package-lock.json  webpack.config.js
src/: lib.rs  store.rs  utils.rs
src/components/: auth.rs  component.rs  example.rs  home.rs  mod.rs
src/components/auth/: login.rs
src/models/: login_input.rs  mod.rs  user.rs
src/routers/: router.rs
src/utils/: api.rs  mod.rs  storage.rs
