[package]
name = "no_framework_frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
spin = "0.9"
reqwest = { version = "0.11.26", features = ["json", "cookies"] }
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0" }
wasm-bindgen-futures = "0.4.42"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'MouseEvent',
    'Location',
    'Storage',
]
